[metadata]
name = gefilte
version = attr: gefilte.__version__
description = Gefilte Fish GMail filter creator
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/nedbat/gefilte
author = Ned Batchelder
author_email = ned@nedbatchelder.com
license = Apache
zip_safe = True
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
packages =
    gefilte
package_dir =
    = src

[wheel]
universal = 1
